# lawRAG

./: .gitignore  README.md  config.json  eda.ipynb  inference.ipynb  kaggle_offline_submission.ipynb  pyproject.toml  requirements.txt
lawrag/: __init__.py  common.py  data.py  finetune.py  pipeline.py  retrieval.py
scripts/: fine_tune.py  inference.py  sweep.py
